@@ -74,6 +74,7 @@ $webcalConfig = array (
 "LIMIT_APPTS_NUMBER"=>"6",
 "LIMIT_APPTS"=>"N",
 "LIMIT_DESCRIPTION_SIZE"=>"N",
+"MYEVENTS"=>"#006000",
 "NONUSER_AT_TOP"=>"Y",
 "NONUSER_ENABLED"=>"Y",
 "OTHERMONTHBG"=>"#D0D0D0",
