@@ -181,6 +181,7 @@ Version 1.1.0-CVS (?? ??? 2005)
     + Category was lost wan clicking on prev/next month in month.php
     + Fixed small bug if using 59 minutes for event time
   - New Features / Enhancements / Changes:
+    + Made "My event text" color an option instead of always using green
     + Added tabs to pref.php
     + Removed admin_handler.php and pref_handler.php
     + New Joomla user authentication file (user-app-joomla.php)
